Modal style fix: 'Later x' on Authentication page is not in modal - z-index was wrong.

--- a/src/containers/AuthenticationPage/AuthenticationPage.css
+++ b/src/containers/AuthenticationPage/AuthenticationPage.css
@@ -59,6 +59,9 @@
 
 .verifyClose {
   @apply --marketplaceModalCloseStyles;
+
+  /* This is not a real modal, z-index should not be modal's z-index */
+  z-index: 1;
 }
 
 .closeText {
